@@ -1,3 +1,7 @@
+2007-12-03  Lluis Sanchez Gual <lluis@novell.com> 
+
+	* Main.cs: Added parameter for setting the startup path.
+
 2007-10-29  Lluis Sanchez Gual <lluis@novell.com> 
 
 	* mautil.mdp: Update paths.
